# SlobySets

./: LICENSE  setup.cfg
SlobySets/: SlobySetsInterface.py
