[metadata]
name = SlobySets
version = 0.0.1
author = Tamás Hadházy
author_email = hadhazytamas15@gmail.com
description = "Extension for python sets"
long_description = "file: README.md"
long_description_content_type = text/markdown
url = https://github.com/Hels15/SlobySets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = 3.10.0
include_package_data = True